/**
 * # Crypto Service
 * Block stream messages that report the results of transactions handled by
 * the `Crypto` service. This service primarily handles account management
 * and HBAR transfers.
 *
 * > Note
 * >> Tokens other than HBAR, including all NFTs, are managed by the `Token` Service.
 *
 * ### Keywords
 * The key words "MUST", "MUST NOT", "REQUIRED", "SHALL", "SHALL NOT",
 * "SHOULD", "SHOULD NOT", "RECOMMENDED", "MAY", and "OPTIONAL" in this
 * document are to be interpreted as described in
 * [RFC2119](https://www.ietf.org/rfc/rfc2119) and clarified in
 * [RFC8174](https://www.ietf.org/rfc/rfc8174).
 */
syntax = "proto3";

package com.hedera.hapi.block.stream.output;

/*
 * Copyright (C) 2024 Hedera Hashgraph, LLC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

option java_package = "com.hedera.hapi.block.stream.output.protoc";
// <<<pbj.java_package = "com.hedera.hapi.block.stream.output">>> This comment is special code for setting PBJ Compiler java package
option java_multiple_files = true;

import "custom_fees.proto";

/**
 * Block Stream data for a `approveAllowances` transaction.
 *
 * This message SHALL NOT duplicate information already contained in
 * the original transaction.
 */
message ApproveAllowanceOutput {}

/**
 * Block Stream data for a `deleteAllowances` transaction.
 *
 * This message SHALL NOT duplicate information already contained in
 * the original transaction.
 */
message DeleteAllowanceOutput {}

/**
 * Block Stream data for a `createAccount` transaction.
 *
 * This message SHALL NOT duplicate information already contained in
 * the original transaction.
 */
message CreateAccountOutput {}

/**
 * Block Stream data for a `cryptoDelete` transaction.
 *
 * This message SHALL NOT duplicate information already contained in
 * the original transaction.
 */
message DeleteAccountOutput {}

/**
 * Block Stream data for a `cryptoTransfer` transaction.
 *
 * This message SHALL NOT duplicate information already contained in
 * the original transaction.
 */
message CryptoTransferOutput {
  /**
   * Custom fees assessed during a CryptoTransfer.
   * <p>
   * These fees SHALL be present in the full transfer list for the transaction.
   */
  repeated proto.AssessedCustomFee assessed_custom_fees = 1;
}

/**
 * Block Stream data for a `updateAccount` transaction.
 *
 * This message SHALL NOT duplicate information already contained in
 * the original transaction.
 */
message UpdateAccountOutput {}
